--- a/templates/mountain/index.html.twig
+++ b/templates/mountain/index.html.twig
@@ -55,9 +55,6 @@ content %}
           Habitat : Régions montagneuses et falaises escarpées <br />
           État de l'animal : {{ animal1.etat }} <br />
           Nourriture proposée : {{ animal1.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal1.grammage }} g<br />
-          Date de passage :
-          {{ animal1.dateDernierPassage ? animal1.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Scott" class="jaime-btn">❤️ J'aime</button>
@@ -91,9 +88,6 @@ content %}
           Habitat : Montagnes rocailleuses et pentes escarpées <br />
           État de l'animal : {{ animal2.etat }} <br />
           Nourriture proposée : {{ animal2.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal2.grammage }} g<br />
-          Date de passage :
-          {{ animal2.dateDernierPassage ? animal2.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-CriCri" class="jaime-btn">❤️ J'aime</button>
@@ -113,11 +107,8 @@ content %}
         </p>
         <div style="display: none">
           Habitat : Montagnes rocailleuses et pentes escarpées <br />
-          tat de l'animal : {{ animal3.etat }} <br />
+          État de l'animal : {{ animal3.etat }} <br />
           Nourriture proposée : {{ animal3.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal3.grammage }} g<br />
-          Date de passage :
-          {{ animal3.dateDernierPassage ? animal3.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Doug" class="jaime-btn">❤️ J'aime</button>
@@ -151,9 +142,6 @@ content %}
           Habitat : Forêts et montagnes boisées <br />
           État de l'animal : {{ animal4.etat }} <br />
           Nourriture proposée : {{ animal4.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal4.grammage }} g<br />
-          Date de passage :
-          {{ animal4.dateDernierPassage ? animal4.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Wolf" class="jaime-btn">❤️ J'aime</button>
@@ -175,9 +163,6 @@ content %}
           Habitat : Montagnes rocheuses et prairies alpines <br />
           État de l'animal : {{ animal5.etat }} <br />
           Nourriture proposée : {{ animal5.nourritureProposee }} <br />
-          Grammage de la nourriture : {{ animal5.grammage }} g<br />
-          Date de passage :
-          {{ animal5.dateDernierPassage ? animal5.dateDernierPassage|date('d-m-Y H:i') : 'Non renseignée' }}
         </div>
         <div class="like-button-container">
           <button id="increment-Spog" class="jaime-btn">❤️ J'aime</button>
