finalisation du système de statistiques MongoDB + ajout des boutons j'aime

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,5 +1,5 @@
-{# templates/home/index.html.twig #} {% extends 'base.html.twig' %} {% block
-title %}Bienvenue à Arcadia{% endblock %} {% block content %}
+{% extends 'base.html.twig' %} {% block title %}Bienvenue à Arcadia{% endblock
+%} {% block content %}
 <div class="background-section">
   <div class="container">
     <div class="row">
