--- a/templates/jungle/index.html.twig
+++ b/templates/jungle/index.html.twig
@@ -56,7 +56,16 @@ content %}
           Nourriture proposée : {{ animal1.nourritureProposee }} <br />
         </div>
         <div class="like-button-container">
-          <button id="increment-Killer" class="jaime-btn">❤️ J'aime</button>
+          <button
+            type="button"
+            class="jaime-btn"
+            data-url="{{ path('jaime_incrementer', { id: animal1.id }) }}"
+            data-id="{{ animal1.id }}"
+            data-name="{{ animal1.prenom }}"
+            data-token="{{ csrf_token('like_' ~ animal1.id) }}"
+          >
+            ❤️ J'aime
+          </button>
         </div>
       </article>
       <article class="service">
@@ -88,7 +97,16 @@ content %}
           Nourriture proposée : {{ animal2.nourritureProposee }} <br />
         </div>
         <div class="like-button-container">
-          <button id="increment-Garry" class="jaime-btn">❤️ J'aime</button>
+          <button
+            type="button"
+            class="jaime-btn"
+            data-url="{{ path('jaime_incrementer', { id: animal2.id }) }}"
+            data-id="{{ animal2.id }}"
+            data-name="{{ animal2.prenom }}"
+            data-token="{{ csrf_token('like_' ~ animal2.id) }}"
+          >
+            ❤️ J'aime
+          </button>
         </div>
       </article>
     </div>
@@ -108,7 +126,16 @@ content %}
           Nourriture proposée : {{ animal3.nourritureProposee }} <br />
         </div>
         <div class="like-button-container">
-          <button id="increment-Kaki" class="jaime-btn">❤️ J'aime</button>
+          <button
+            type="button"
+            class="jaime-btn"
+            data-url="{{ path('jaime_incrementer', { id: animal3.id }) }}"
+            data-id="{{ animal3.id }}"
+            data-name="{{ animal3.prenom }}"
+            data-token="{{ csrf_token('like_' ~ animal3.id) }}"
+          >
+            ❤️ J'aime
+          </button>
         </div>
       </article>
       <article class="service">
@@ -140,7 +167,16 @@ content %}
           Nourriture proposée : {{ animal4.nourritureProposee }} <br />
         </div>
         <div class="like-button-container">
-          <button id="increment-Spin" class="jaime-btn">❤️ J'aime</button>
+          <button
+            type="button"
+            class="jaime-btn"
+            data-url="{{ path('jaime_incrementer', { id: animal4.id }) }}"
+            data-id="{{ animal4.id }}"
+            data-name="{{ animal4.prenom }}"
+            data-token="{{ csrf_token('like_' ~ animal4.id) }}"
+          >
+            ❤️ J'aime
+          </button>
         </div>
       </article>
     </div>
@@ -160,7 +196,16 @@ content %}
           Nourriture proposée : {{ animal5.nourritureProposee }} <br />
         </div>
         <div class="like-button-container">
-          <button id="increment-Rex" class="jaime-btn">❤️ J'aime</button>
+          <button
+            type="button"
+            class="jaime-btn"
+            data-url="{{ path('jaime_incrementer', { id: animal5.id }) }}"
+            data-id="{{ animal5.id }}"
+            data-name="{{ animal5.prenom }}"
+            data-token="{{ csrf_token('like_' ~ animal5.id) }}"
+          >
+            ❤️ J'aime
+          </button>
         </div>
       </article>
       <article class="service">
