test chemin css heroku

--- a/templates/user_base.html.twig
+++ b/templates/user_base.html.twig
@@ -16,10 +16,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="{{ asset('assets/css/style_dashboard.css') }}"
-    />
+    <link rel="stylesheet" href="{{ asset('css/style_dashboard.css') }}" />
   </head>
   <body>
     <header>
